Before change to directed, weights

--- a/pymatgen/analysis/Testing_Network.ipynb
+++ b/pymatgen/analysis/Testing_Network.ipynb
@@ -92,37 +92,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "96ad168838694ae1a004ac04491bf011",
+       "model_id": "924d955e6d3248ca88d06d897fdb76ad",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Renderer(background='white', camera=OrthographicCamera(bottom=-6.7520014130399995, left=-6.7520014130399995, n…"
+       "Renderer(background='white', camera=OrthographicCamera(bottom=-5.6984556159599995, left=-5.6984556159599995, n…"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "view(RN.entries_list[208].molecule,bonding_strategy=\"OpenBabelNN\")"
+    "view(RN.entries_list[210].molecule,bonding_strategy=\"OpenBabelNN\")\n",
+    "RN.entries_list[210].charge"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "209,210\n",
+      "rxn_type : one_electron_redox\n",
+      "bipartite : 1\n",
+      "energy : 0.07843445247800673\n",
+      "free_energy : 2.169687602419799\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for neighbor in list(RN.graph.neighbors(210)):\n",
+    "    print(neighbor)\n",
+    "    for key in RN.graph.node[neighbor]:\n",
+    "        print(key,\":\",RN.graph.node[neighbor][key])\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "92e201f72ac9402c89a30a2839b1f8c9",
+       "model_id": "8c09a18438594961b1205f9d402e664a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -132,31 +169,315 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "view(RN.entries[\"C3 H4 Li1 O3\"][12][0][0].molecule,bonding_strategy=\"OpenBabelNN\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/plain": [
-       "209"
+       "0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "RN.entries[\"C3 H4 Li1 O3\"][12][0][0].parameters[\"ind\"]"
+    "view(RN.entries_list[209].molecule,bonding_strategy=\"OpenBabelNN\")\n",
+    "RN.entries_list[209].charge"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "209,210\n",
+      "rxn_type : one_electron_redox\n",
+      "bipartite : 1\n",
+      "energy : 0.07843445247800673\n",
+      "free_energy : 2.169687602419799\n",
+      "\n",
+      "208,209\n",
+      "rxn_type : intramol_single_bond_change\n",
+      "bipartite : 1\n",
+      "energy : 0.03746218086303088\n",
+      "free_energy : 1.1988151561727136\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for neighbor in list(RN.graph.neighbors(209)):\n",
+    "    print(neighbor)\n",
+    "    for key in RN.graph.node[neighbor]:\n",
+    "        print(key,\":\",RN.graph.node[neighbor][key])\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0001c98c426744c281c6a0f2685f86e8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Renderer(background='white', camera=OrthographicCamera(bottom=-6.7520014130399995, left=-6.7520014130399995, n…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "view(RN.entries_list[208].molecule,bonding_strategy=\"OpenBabelNN\")\n",
+    "RN.entries_list[208].charge"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "207,208\n",
+      "rxn_type : one_electron_redox\n",
+      "bipartite : 1\n",
+      "energy : 0.10700326433396867\n",
+      "free_energy : 2.9053784799398272\n",
+      "\n",
+      "208,209\n",
+      "rxn_type : intramol_single_bond_change\n",
+      "bipartite : 1\n",
+      "energy : 0.03746218086303088\n",
+      "free_energy : 1.1988151561727136\n",
+      "\n",
+      "208,26+120\n",
+      "rxn_type : single_bond_breakage\n",
+      "bipartite : 1\n",
+      "energy : 0.12262937153201392\n",
+      "free_energy : 2.748628039684263\n",
+      "\n",
+      "208,27+119\n",
+      "rxn_type : single_bond_breakage\n",
+      "bipartite : 1\n",
+      "energy : 0.03514357447528482\n",
+      "free_energy : 0.36044270861384575\n",
+      "\n",
+      "208,12+85\n",
+      "rxn_type : single_bond_breakage\n",
+      "bipartite : 1\n",
+      "energy : 0.32784811307334394\n",
+      "free_energy : 8.187117081153701\n",
+      "\n",
+      "208,11+87\n",
+      "rxn_type : single_bond_breakage\n",
+      "bipartite : 1\n",
+      "energy : 0.18139776248142425\n",
+      "free_energy : 4.205527752190392\n",
+      "\n",
+      "208,10+89\n",
+      "rxn_type : single_bond_breakage\n",
+      "bipartite : 1\n",
+      "energy : 0.21144497289822084\n",
+      "free_energy : 5.007263512266945\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for neighbor in list(RN.graph.neighbors(208)):\n",
+    "    print(neighbor)\n",
+    "    for key in RN.graph.node[neighbor]:\n",
+    "        print(key,\":\",RN.graph.node[neighbor][key])\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "134f39ca0b2a4ddb801fe792ade74f79",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Renderer(background='white', camera=OrthographicCamera(bottom=-7.18941198384, left=-7.18941198384, near=-2000.…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "view(RN.entries_list[207].molecule,bonding_strategy=\"OpenBabelNN\")\n",
+    "RN.entries_list[207].charge"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "207,208\n",
+      "rxn_type : one_electron_redox\n",
+      "bipartite : 1\n",
+      "energy : 0.10700326433396867\n",
+      "free_energy : 2.9053784799398272\n",
+      "\n",
+      "207,10+87\n",
+      "rxn_type : single_bond_breakage\n",
+      "bipartite : 1\n",
+      "energy : 0.15015395331317904\n",
+      "free_energy : 3.330511119633229\n",
+      "\n",
+      "207,11+85\n",
+      "rxn_type : single_bond_breakage\n",
+      "bipartite : 1\n",
+      "energy : 0.19501205221041573\n",
+      "free_energy : 4.5662127215728106\n",
+      "\n",
+      "207,27+118\n",
+      "rxn_type : single_bond_breakage\n",
+      "bipartite : 1\n",
+      "energy : 0.118908146099443\n",
+      "free_energy : 2.4039168018844066\n",
+      "\n",
+      "207,26+119\n",
+      "rxn_type : single_bond_breakage\n",
+      "bipartite : 1\n",
+      "energy : -0.039454803968737906\n",
+      "free_energy : -1.6112176416409056\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for neighbor in list(RN.graph.neighbors(207)):\n",
+    "    print(neighbor)\n",
+    "    for key in RN.graph.node[neighbor]:\n",
+    "        print(key,\":\",RN.graph.node[neighbor][key])\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9d5d863d9333425b8a041bb87a2eb9a4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Renderer(background='white', camera=OrthographicCamera(bottom=-3.2421475638, left=-3.2421475638, near=-2000.0,…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "view(RN.entries_list[26].molecule,bonding_strategy=\"OpenBabelNN\")\n",
+    "RN.entries_list[26].charge"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6613f496f0a24e809093ea38ef62ba26",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Renderer(background='white', camera=OrthographicCamera(bottom=-3.2333264612400003, left=-3.2333264612400003, n…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "view(RN.entries_list[119].molecule,bonding_strategy=\"OpenBabelNN\")\n",
+    "RN.entries_list[119].charge"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
