prereqs handled, but debugging / testing needed

--- a/pymatgen/analysis/Testing_Network.ipynb
+++ b/pymatgen/analysis/Testing_Network.ipynb
@@ -541,18 +541,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1e7e1e4197db403983b83ef2ec1f5268",
+       "model_id": "79245555361545a9829d5b63e599987d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Renderer(background='white', camera=OrthographicCamera(bottom=-11.317179820319998, left=-11.317179820319998, n…"
+       "Renderer(background='white', camera=OrthographicCamera(bottom=-12.12831622872, left=-12.12831622872, near=-200…"
       ]
      },
      "metadata": {},
@@ -564,14 +564,14 @@
        "0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "view(RN.entries_list[246].molecule,bonding_strategy=\"OpenBabelNN\")\n",
-    "RN.entries_list[246].charge"
+    "view(RN.entries_list[248].molecule,bonding_strategy=\"OpenBabelNN\")\n",
+    "RN.entries_list[248].charge"
    ]
   },
   {
