Multi-source paths and more

--- a/pymatgen/analysis/Testing_Network.ipynb
+++ b/pymatgen/analysis/Testing_Network.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -65,23 +65,7 @@
       "WARNING: Free energy lower but electronic energy higher!\n",
       "WARNING: Free energy lower but electronic energy higher!\n",
       "WARNING: Free energy lower but electronic energy higher!\n",
-      "252 unique entries\n",
-      "Before reactions\n",
-      "252 nodes\n",
-      "0 edges\n",
-      "\n",
-      "After 1e redox\n",
-      "490 nodes\n",
-      "476 edges\n",
-      "\n",
-      "After intramol single bond change\n",
-      "566 nodes\n",
-      "628 edges\n",
-      "\n",
-      "After intermol single bond change\n",
-      "1542 nodes\n",
-      "3546 edges\n",
-      "\n"
+      "252 unique entries\n"
      ]
     }
    ],
@@ -97,7 +81,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9fba35125b274ec6905d52cc26b11b12",
+       "model_id": "e1bf114393e54a0780fb4280d664c008",
        "version_major": 2,
        "version_minor": 0
       },
@@ -141,7 +125,7 @@
      "output_type": "stream",
      "text": [
       "221,220\n",
-      "rxn_type : one_electron_reduction\n",
+      "rxn_type : One electron reduction\n",
       "bipartite : 1\n",
       "energy : -0.07843445247800673\n",
       "free_energy : -2.169687602419799\n",
@@ -165,7 +149,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "445c9477a7c04dfabbb1657040cb219b",
+       "model_id": "dc94f7fd618c47a18219d7674c281496",
        "version_major": 2,
        "version_minor": 0
       },
@@ -202,13 +186,13 @@
      "output_type": "stream",
      "text": [
       "220,221\n",
-      "rxn_type : one_electron_oxidation\n",
+      "rxn_type : One electron oxidation\n",
       "bipartite : 1\n",
       "energy : 0.07843445247800673\n",
       "free_energy : 2.169687602419799\n",
       "\n",
       "220,219\n",
-      "rxn_type : intramol_single_bond_breakage\n",
+      "rxn_type : Intramolecular single bond breakage\n",
       "bipartite : 1\n",
       "energy : -0.03746218086303088\n",
       "free_energy : -1.1988151561727136\n",
@@ -232,7 +216,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "911cdcff576e456b90a8fa003f7f02e2",
+       "model_id": "c210498ac8d94e5d9028191dcca41731",
        "version_major": 2,
        "version_minor": 0
       },
@@ -541,18 +525,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
+   "execution_count": 23,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "79245555361545a9829d5b63e599987d",
+       "model_id": "65e4328ff8414e5683188b4efbb72360",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Renderer(background='white', camera=OrthographicCamera(bottom=-12.12831622872, left=-12.12831622872, near=-200…"
+       "Renderer(background='white', camera=OrthographicCamera(bottom=-5.890315477560001, left=-5.890315477560001, nea…"
       ]
      },
      "metadata": {},
@@ -561,117 +547,57 @@
     {
      "data": {
       "text/plain": [
-       "0"
+       "-1"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "view(RN.entries_list[248].molecule,bonding_strategy=\"OpenBabelNN\")\n",
-    "RN.entries_list[248].charge"
+    "view(RN.entries_list[232].molecule,bonding_strategy=\"OpenBabelNN\")\n",
+    "RN.entries_list[232].charge"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "119,118\n",
-      "rxn_type : one_electron_reduction\n",
+      "246,245\n",
+      "rxn_type : One electron reduction\n",
       "bipartite : 1\n",
-      "energy : -0.023238692709796283\n",
-      "free_energy : -0.8619043866692664\n",
+      "energy : -0.01568824934508939\n",
+      "free_energy : -0.45401455634782906\n",
       "\n",
-      "119,120\n",
-      "rxn_type : one_electron_oxidation\n",
+      "246,27+219\n",
+      "rxn_type : Molecular decomposition breaking one bond A->B+C\n",
       "bipartite : 1\n",
-      "energy : 0.2690874398347063\n",
-      "free_energy : 7.26522416126636\n",
+      "energy : 0.14237749660492227\n",
+      "free_energy : 3.0550950785691384\n",
       "\n",
-      "119,10+12\n",
-      "rxn_type : Molecular decomposition breaking one bond: A->B+C\n",
+      "246,85+89\n",
+      "rxn_type : Molecular decomposition breaking one bond A->B+C\n",
       "bipartite : 1\n",
-      "energy : 0.4202399331801985\n",
-      "free_energy : 10.554938052812304\n",
+      "energy : 0.2262870749210606\n",
+      "free_energy : 5.334094910562271\n",
       "\n",
-      "119,11+11\n",
-      "rxn_type : Molecular decomposition breaking one bond: A->B+C\n",
+      "246,87+87\n",
+      "rxn_type : Molecular decomposition breaking one bond A->B+C\n",
       "bipartite : 1\n",
-      "energy : 0.31864768148550127\n",
-      "free_energy : 7.809050325788576\n",
-      "\n",
-      "119+249,121\n",
-      "rxn_type : Molecular formation from one new bond: A+B -> C\n",
-      "bipartite : 1\n",
-      "energy : -0.056281721076800295\n",
-      "free_energy : -1.1155573229125366\n",
-      "\n",
-      "119+250,122\n",
-      "rxn_type : Molecular formation from one new bond: A+B -> C\n",
-      "bipartite : 1\n",
-      "energy : -0.04411217945269641\n",
-      "free_energy : -0.8553620351958671\n",
-      "\n",
-      "21+119,211\n",
-      "rxn_type : Molecular formation from one new bond: A+B -> C\n",
-      "bipartite : 1\n",
-      "energy : 0.03759273613670189\n",
-      "free_energy : 1.5622929855844632\n",
-      "\n",
-      "22+119,212\n",
-      "rxn_type : Molecular formation from one new bond: A+B -> C\n",
-      "bipartite : 1\n",
-      "energy : 0.04647651318569501\n",
-      "free_energy : 1.7912510788783038\n",
-      "\n",
-      "24+119,213\n",
-      "rxn_type : Molecular formation from one new bond: A+B -> C\n",
-      "bipartite : 1\n",
-      "energy : 0.026440387703729584\n",
-      "free_energy : 1.290956702350286\n",
-      "\n",
-      "25+119,214\n",
-      "rxn_type : Molecular formation from one new bond: A+B -> C\n",
-      "bipartite : 1\n",
-      "energy : 0.048804545293705814\n",
-      "free_energy : 1.7798946519528727\n",
-      "\n",
-      "26+119,218\n",
-      "rxn_type : Molecular formation from one new bond: A+B -> C\n",
-      "bipartite : 1\n",
-      "energy : 0.039454803968737906\n",
-      "free_energy : 1.6112176416418151\n",
-      "\n",
-      "27+119,219\n",
-      "rxn_type : Molecular formation from one new bond: A+B -> C\n",
-      "bipartite : 1\n",
-      "energy : -0.03514357447528482\n",
-      "free_energy : -0.360442708613391\n",
-      "\n",
-      "31+119,222\n",
-      "rxn_type : Molecular formation from one new bond: A+B -> C\n",
-      "bipartite : 1\n",
-      "energy : 0.060511065763705574\n",
-      "free_energy : 2.1287736771764685\n",
-      "\n",
-      "34+119,226\n",
-      "rxn_type : Molecular formation from one new bond: A+B -> C\n",
-      "bipartite : 1\n",
-      "energy : -0.01629694132827808\n",
-      "free_energy : 0.1058493617001659\n",
+      "energy : 0.15138176560697048\n",
+      "free_energy : 3.2966575485479552\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "for neighbor in list(RN.graph.neighbors(119)):\n",
+    "for neighbor in list(RN.graph.neighbors(246)):\n",
     "    print(neighbor)\n",
     "    for key in RN.graph.node[neighbor]:\n",
     "        print(key,\":\",RN.graph.node[neighbor][key])\n",
@@ -942,6 +868,348 @@
     "for ind in to_view:\n",
     "    view(RN.entries_list[ind].molecule,bonding_strategy=\"OpenBabelNN\")\n",
     "    print(ind,RN.entries_list[ind].charge)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 H1 C1\n",
+      "1 H1 C1\n",
+      "2 H1 C1\n",
+      "3 Li1 H1 C1 O1\n",
+      "4 Li1 H1 C1 O1\n",
+      "5 Li1 H1 C1 O1\n",
+      "6 Li1 H1 C1 O2\n",
+      "7 H1 C1 O1\n",
+      "8 H1 C1 O1\n",
+      "9 H1 C1 O1\n",
+      "10 H2 C1\n",
+      "11 H2 C1\n",
+      "12 H2 C1\n",
+      "13 Li1 H2 C1 O1\n",
+      "14 Li1 H2 C1 O1\n",
+      "15 Li1 H2 C1 O1\n",
+      "16 H2 C1 O1\n",
+      "17 H2 C1 O1\n",
+      "18 H2 C1 O1\n",
+      "19 Li1 C1 O1\n",
+      "20 Li1 C1 O1\n",
+      "21 Li1 C1 O2\n",
+      "22 Li1 C1 O2\n",
+      "23 Li1 C1 O2\n",
+      "24 Li1 C1 O2\n",
+      "25 Li1 C1 O2\n",
+      "26 Li1 C1 O3\n",
+      "27 Li1 C1 O3\n",
+      "28 C1 O1\n",
+      "29 C1 O1\n",
+      "30 C1 O1\n",
+      "31 C1 O2\n",
+      "32 C1 O2\n",
+      "33 C1 O2\n",
+      "34 C1 O3\n",
+      "35 C2\n",
+      "36 C2\n",
+      "37 C2\n",
+      "38 H1 C2\n",
+      "39 H1 C2\n",
+      "40 H1 C2\n",
+      "41 Li1 H1 C2 O1\n",
+      "42 Li1 H1 C2 O1\n",
+      "43 Li1 H1 C2 O1\n",
+      "44 Li1 H1 C2 O1\n",
+      "45 Li1 H1 C2 O2\n",
+      "46 Li1 H1 C2 O2\n",
+      "47 Li1 H1 C2 O2\n",
+      "48 Li1 H1 C2 O2\n",
+      "49 Li1 H1 C2 O2\n",
+      "50 Li1 H1 C2 O2\n",
+      "51 Li1 H1 C2 O2\n",
+      "52 Li1 H1 C2 O2\n",
+      "53 Li1 H1 C2 O3\n",
+      "54 Li1 H1 C2 O3\n",
+      "55 Li1 H1 C2 O3\n",
+      "56 Li1 H1 C2 O3\n",
+      "57 H1 C2 O1\n",
+      "58 H1 C2 O1\n",
+      "59 H1 C2 O1\n",
+      "60 H1 C2 O1\n",
+      "61 H1 C2 O2\n",
+      "62 H1 C2 O2\n",
+      "63 H1 C2 O2\n",
+      "64 H1 C2 O3\n",
+      "65 H2 C2\n",
+      "66 H2 C2\n",
+      "67 H2 C2\n",
+      "68 H2 C2\n",
+      "69 H2 C2\n",
+      "70 H2 C2\n",
+      "71 Li1 H2 C2 O1\n",
+      "72 Li1 H2 C2 O1\n",
+      "73 Li1 H2 C2 O1\n",
+      "74 Li1 H2 C2 O1\n",
+      "75 Li1 H2 C2 O1\n",
+      "76 Li1 H2 C2 O2\n",
+      "77 Li1 H2 C2 O2\n",
+      "78 Li1 H2 C2 O2\n",
+      "79 Li1 H2 C2 O2\n",
+      "80 Li1 H2 C2 O2\n",
+      "81 Li1 H2 C2 O2\n",
+      "82 Li1 H2 C2 O2\n",
+      "83 Li1 H2 C2 O2\n",
+      "84 Li1 H2 C2 O2\n",
+      "85 Li1 H2 C2 O3\n",
+      "86 Li1 H2 C2 O3\n",
+      "87 Li1 H2 C2 O3\n",
+      "88 Li1 H2 C2 O3\n",
+      "89 Li1 H2 C2 O3\n",
+      "90 H2 C2 O1\n",
+      "91 H2 C2 O1\n",
+      "92 H2 C2 O1\n",
+      "93 H2 C2 O1\n",
+      "94 H2 C2 O1\n",
+      "95 H2 C2 O1\n",
+      "96 H2 C2 O2\n",
+      "97 H2 C2 O2\n",
+      "98 H2 C2 O2\n",
+      "99 H2 C2 O2\n",
+      "100 H2 C2 O2\n",
+      "101 H2 C2 O3\n",
+      "102 H2 C2 O3\n",
+      "103 H3 C2\n",
+      "104 H3 C2\n",
+      "105 H3 C2\n",
+      "106 Li1 H3 C2 O1\n",
+      "107 Li1 H3 C2 O1\n",
+      "108 Li1 H3 C2 O1\n",
+      "109 Li1 H3 C2 O1\n",
+      "110 Li1 H3 C2 O2\n",
+      "111 Li1 H3 C2 O2\n",
+      "112 Li1 H3 C2 O2\n",
+      "113 Li1 H3 C2 O2\n",
+      "114 H3 C2 O1\n",
+      "115 H3 C2 O1\n",
+      "116 H3 C2 O2\n",
+      "117 H3 C2 O2\n",
+      "118 H4 C2\n",
+      "119 H4 C2\n",
+      "120 H4 C2\n",
+      "121 Li1 H4 C2 O1\n",
+      "122 Li1 H4 C2 O1\n",
+      "123 Li1 H4 C2 O2\n",
+      "124 Li1 H4 C2 O2\n",
+      "125 H4 C2 O2\n",
+      "126 Li1 C2 O1\n",
+      "127 Li1 C2 O1\n",
+      "128 Li1 C2 O1\n",
+      "129 Li1 C2 O2\n",
+      "130 Li1 C2 O2\n",
+      "131 Li1 C2 O3\n",
+      "132 Li1 C2 O3\n",
+      "133 Li1 C2 O3\n",
+      "134 C2 O1\n",
+      "135 C2 O1\n",
+      "136 C2 O1\n",
+      "137 C2 O1\n",
+      "138 C2 O2\n",
+      "139 C2 O2\n",
+      "140 Li1 H1 C3 O2\n",
+      "141 Li1 H1 C3 O2\n",
+      "142 Li1 H1 C3 O2\n",
+      "143 Li1 H1 C3 O2\n",
+      "144 Li1 H1 C3 O2\n",
+      "145 Li1 H1 C3 O2\n",
+      "146 Li1 H1 C3 O3\n",
+      "147 Li1 H1 C3 O3\n",
+      "148 Li1 H1 C3 O3\n",
+      "149 Li1 H1 C3 O3\n",
+      "150 Li1 H1 C3 O3\n",
+      "151 Li1 H1 C3 O3\n",
+      "152 Li1 H1 C3 O3\n",
+      "153 Li1 H1 C3 O3\n",
+      "154 H1 C3 O1\n",
+      "155 H1 C3 O1\n",
+      "156 H1 C3 O1\n",
+      "157 H1 C3 O2\n",
+      "158 H1 C3 O2\n",
+      "159 H1 C3 O2\n",
+      "160 H1 C3 O2\n",
+      "161 H1 C3 O2\n",
+      "162 H1 C3 O2\n",
+      "163 H1 C3 O2\n",
+      "164 H1 C3 O3\n",
+      "165 H1 C3 O3\n",
+      "166 H1 C3 O3\n",
+      "167 H1 C3 O3\n",
+      "168 Li1 H2 C3 O2\n",
+      "169 Li1 H2 C3 O2\n",
+      "170 Li1 H2 C3 O2\n",
+      "171 Li1 H2 C3 O2\n",
+      "172 Li1 H2 C3 O2\n",
+      "173 Li1 H2 C3 O2\n",
+      "174 Li1 H2 C3 O2\n",
+      "175 Li1 H2 C3 O3\n",
+      "176 Li1 H2 C3 O3\n",
+      "177 Li1 H2 C3 O3\n",
+      "178 Li1 H2 C3 O3\n",
+      "179 Li1 H2 C3 O3\n",
+      "180 Li1 H2 C3 O3\n",
+      "181 H2 C3 O2\n",
+      "182 H2 C3 O2\n",
+      "183 H2 C3 O2\n",
+      "184 H2 C3 O2\n",
+      "185 H2 C3 O2\n",
+      "186 H2 C3 O2\n",
+      "187 H2 C3 O3\n",
+      "188 H2 C3 O3\n",
+      "189 H2 C3 O3\n",
+      "190 H2 C3 O3\n",
+      "191 H2 C3 O3\n",
+      "192 Li1 H3 C3 O2\n",
+      "193 Li1 H3 C3 O2\n",
+      "194 Li1 H3 C3 O2\n",
+      "195 Li1 H3 C3 O2\n",
+      "196 Li1 H3 C3 O3\n",
+      "197 Li1 H3 C3 O3\n",
+      "198 Li1 H3 C3 O3\n",
+      "199 Li1 H3 C3 O3\n",
+      "200 Li1 H3 C3 O3\n",
+      "201 Li1 H3 C3 O3\n",
+      "202 H3 C3 O2\n",
+      "203 H3 C3 O2\n",
+      "204 H3 C3 O2\n",
+      "205 H3 C3 O2\n",
+      "206 H3 C3 O2\n",
+      "207 H3 C3 O3\n",
+      "208 H3 C3 O3\n",
+      "209 H3 C3 O3\n",
+      "210 H3 C3 O3\n",
+      "211 Li1 H4 C3 O2\n",
+      "212 Li1 H4 C3 O2\n",
+      "213 Li1 H4 C3 O2\n",
+      "214 Li1 H4 C3 O2\n",
+      "215 Li1 H4 C3 O3\n",
+      "216 Li1 H4 C3 O3\n",
+      "217 Li1 H4 C3 O3\n",
+      "218 Li1 H4 C3 O3\n",
+      "219 Li1 H4 C3 O3\n",
+      "220 Li1 H4 C3 O3\n",
+      "221 Li1 H4 C3 O3\n",
+      "222 H4 C3 O2\n",
+      "223 H4 C3 O2\n",
+      "224 H4 C3 O2\n",
+      "225 H4 C3 O2\n",
+      "226 H4 C3 O3\n",
+      "227 H4 C3 O3\n",
+      "228 H4 C3 O3\n",
+      "229 H4 C3 O3\n",
+      "230 H4 C3 O3\n",
+      "231 Li1 C3 O2\n",
+      "232 Li1 C3 O3\n",
+      "233 Li1 C3 O3\n",
+      "234 Li1 C3 O3\n",
+      "235 C3 O1\n",
+      "236 C3 O1\n",
+      "237 C3 O2\n",
+      "238 C3 O2\n",
+      "239 C3 O2\n",
+      "240 C3 O2\n",
+      "241 C3 O2\n",
+      "242 C3 O3\n",
+      "243 C3 O3\n",
+      "244 C3 O3\n",
+      "245 Li2 H4 C4 O6\n",
+      "246 Li2 H4 C4 O6\n",
+      "247 Li2 H4 C4 O6\n",
+      "248 Li2 H8 C6 O6\n",
+      "249 Li1 O1\n",
+      "250 Li1 O1\n",
+      "251 Li1 O1\n"
+     ]
+    }
+   ],
+   "source": [
+    "for ii,entry in enumerate(RN.entries_list):\n",
+    "    print(ii,entry.molecule.formula)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "af1f04a728a64fb2b8e57461c574f1ab",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Renderer(background='white', camera=OrthographicCamera(bottom=-1.2793967673599997, left=-1.2793967673599997, n…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ind=29\n",
+    "view(RN.entries_list[ind].molecule,bonding_strategy=\"OpenBabelNN\")\n",
+    "RN.entries_list[ind].charge"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "08e8718a40954957831864d21a3f8602",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Renderer(background='white', camera=OrthographicCamera(bottom=-11.374637609879999, left=-11.374637609879999, n…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ind=245\n",
+    "view(RN.entries_list[ind].molecule,bonding_strategy=\"OpenBabelNN\")\n",
+    "RN.entries_list[ind].charge"
    ]
   },
   {
