Concerted attempt 1: death by combinatorics

--- a/pymatgen/analysis/Testing_ReNetwork.ipynb
+++ b/pymatgen/analysis/Testing_ReNetwork.ipynb
@@ -150,18 +150,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "67e4fcb079904212a08dd48722b53cf8",
+       "model_id": "4b66855924b64eaeb088351c11df4b8b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Renderer(background='white', camera=OrthographicCamera(bottom=-2.9948617707599996, left=-2.9948617707599996, n…"
+       "Renderer(background='white', camera=OrthographicCamera(bottom=-7.157637461399999, left=-7.157637461399999, nea…"
       ]
      },
      "metadata": {},
@@ -171,30 +171,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C1 H2 O3\n"
+      "1\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "-7212.1124817911705"
+       "-9293.270114374945"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ind=30\n",
+    "ind=395\n",
     "view(RN.entries_list[ind].molecule,bonding_strategy=\"OpenBabelNN\")\n",
-    "print(RN.entries_list[ind].formula)\n",
+    "print(RN.entries_list[ind].charge)\n",
     "RN.entries_list[ind].free_energy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 76,
    "metadata": {
     "scrolled": false
    },
@@ -202,12 +202,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "70d49494184640b18358bd6c2e5dd332",
+       "model_id": "e26d854d521a4fce8362276f420a6d39",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Renderer(background='white', camera=OrthographicCamera(bottom=-3.2333264612400003, left=-3.2333264612400003, n…"
+       "Renderer(background='white', camera=OrthographicCamera(bottom=-7.079235145919999, left=-7.079235145919999, nea…"
       ]
      },
      "metadata": {},
@@ -217,25 +217,109 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "1\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "-2137.8055071671874"
+       "-9308.41516190021"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ind=164\n",
+    "ind=452\n",
     "view(RN.entries_list[ind].molecule,bonding_strategy=\"OpenBabelNN\")\n",
     "print(RN.entries_list[ind].charge)\n",
     "RN.entries_list[ind].free_energy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C1 H1 0 1\n",
+      "C3 H3 O3 1 9\n",
+      "C1 0 0\n",
+      "C3 H4 O3 1 10\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8cb8940e6e214005b9913498f9563727",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Renderer(background='white', camera=OrthographicCamera(bottom=-1.02064225992, left=-1.02064225992, near=-2000.…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "82fa223ebece4b58a39c49a3ffc3942e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Renderer(background='white', camera=OrthographicCamera(bottom=-4.881216094919999, left=-4.881216094919999, nea…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f77b6e6d0a7e4f6ca489d51cb3a11618",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Renderer(background='white', camera=OrthographicCamera(bottom=-2.0816681711721684e-18, left=-2.081668171172168…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "37296e7b3e4846d8bca6e27773dd8e75",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Renderer(background='white', camera=OrthographicCamera(bottom=-4.876858825559999, left=-4.876858825559999, nea…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "inds=[4,400,1,457]\n",
+    "print(RN.entries_list[inds[0]].formula,RN.entries_list[inds[0]].charge,RN.entries_list[inds[0]].Nbonds)\n",
+    "print(RN.entries_list[inds[1]].formula,RN.entries_list[inds[1]].charge,RN.entries_list[inds[1]].Nbonds)\n",
+    "print(RN.entries_list[inds[2]].formula,RN.entries_list[inds[2]].charge,RN.entries_list[inds[2]].Nbonds)\n",
+    "print(RN.entries_list[inds[3]].formula,RN.entries_list[inds[3]].charge,RN.entries_list[inds[3]].Nbonds)\n",
+    "view(RN.entries_list[inds[0]].molecule,bonding_strategy=\"OpenBabelNN\")\n",
+    "view(RN.entries_list[inds[1]].molecule,bonding_strategy=\"OpenBabelNN\")\n",
+    "view(RN.entries_list[inds[2]].molecule,bonding_strategy=\"OpenBabelNN\")\n",
+    "view(RN.entries_list[inds[3]].molecule,bonding_strategy=\"OpenBabelNN\")"
    ]
   },
   {
