--- a/pymatgen/analysis/Testing_Network.ipynb
+++ b/pymatgen/analysis/Testing_Network.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,23 +36,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# prod_entries = []\n",
-    "# entries = loadfn(\"/Users/samuelblau/Desktop/smd_production_entries.json\")\n",
-    "# for entry in entries:\n",
-    "#     if \"optimized_molecule\" in entry[\"output\"]:\n",
-    "#         mol = entry[\"output\"][\"optimized_molecule\"]\n",
-    "#     else:\n",
-    "#         mol = entry[\"output\"][\"initial_molecule\"]\n",
-    "#     H = float(entry[\"output\"][\"enthalpy\"])\n",
-    "#     S = float(entry[\"output\"][\"entropy\"])\n",
-    "#     E = float(entry[\"output\"][\"final_energy\"])\n",
-    "#     mol_entry = MoleculeEntry(molecule=mol,energy=E,enthalpy=H,entropy=S,entry_id=entry[\"task_id\"])\n",
-    "#     prod_entries.append(mol_entry)"
+    "prod_entries = []\n",
+    "entries = loadfn(\"/Users/samuelblau/Desktop/smd_production_entries.json\")\n",
+    "for entry in entries:\n",
+    "    if \"optimized_molecule\" in entry[\"output\"]:\n",
+    "        mol = entry[\"output\"][\"optimized_molecule\"]\n",
+    "    else:\n",
+    "        mol = entry[\"output\"][\"initial_molecule\"]\n",
+    "    H = float(entry[\"output\"][\"enthalpy\"])\n",
+    "    S = float(entry[\"output\"][\"entropy\"])\n",
+    "    E = float(entry[\"output\"][\"final_energy\"])\n",
+    "    mol_entry = MoleculeEntry(molecule=mol,energy=E,enthalpy=H,entropy=S,entry_id=entry[\"task_id\"])\n",
+    "    prod_entries.append(mol_entry)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -66,8 +66,25 @@
     }
    ],
    "source": [
-    "# RN = ReactionNetwork(prod_entries)\n",
-    "RN = loadfn(\"/Users/samuelblau/Desktop/prod_RN.json\")"
+    "RN = ReactionNetwork(prod_entries)\n",
+    "# RN = loadfn(\"/Users/samuelblau/Desktop/prod_RN.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "44098\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(RN.num_reactions)"
    ]
   },
   {
